<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="327dp"
        android:layout_height="64dp"
        android:text="@string/label_register"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:text="@string/label_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="138dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textViewSignUpName"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:text="@string/label_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextSignUpName"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/textViewCedula"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_cedula"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpCedula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextSignUpCedula"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:ems="10"
        android:maxLength="10"
        android:numeric="signed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginTop="216dp"
        android:text="@string/label_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="333dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <TextView
        android:id="@+id/textViewSignUpFail1"
        android:layout_width="349dp"
        android:layout_height="71dp"
        android:text=""
        android:textColor="#EF0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="204dp"
        android:layout_height="75dp"
        android:text="@string/label_signup"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:text="@string/Dominio"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/editTextSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.632" />

</androidx.constraintlayout.widget.ConstraintLayout>